[tool.poetry]
name = "gymnasium-docker-ros2"
version = "1.0.0"
description = "A minimum working example to wrap the Gymnasium interface around Docker and ROS2"
authors = ["Jacopo Panerati <jacopo.panerati@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JacopoPan/gymnasium-docker-ros2"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3"
scipy = "^1.16"
matplotlib = "^3.10"
gymnasium = "^1.2"
tqdm = "^4.67"
stable-baselines3 = "^2.7.0"
docker = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
